--- a/nginx.conf
+++ b/nginx.conf
@@ -8,3 +8,20 @@ events {
     accept_mutex    on;
     worker_connections  10240;
 }
+
+# load modules compiled as Dynamic Shared Object (DSO)
+#
+dso {
+    load ngx_http_fastcgi_module.so;
+    load ngx_http_rewrite_module.so;
+    load ngx_http_access_module.so;
+    load ngx_http_empty_gif_module.so;
+    load ngx_http_split_clients_module.so;
+    load ngx_http_charset_filter_module.so;
+    load ngx_http_upstream_session_sticky_module.so;
+    load ngx_http_upstream_ip_hash_module.so;
+    load ngx_http_lua_module.so;
+    load ngx_http_memcached_module.so;
+    #load ngx_http_memc_module.so;
+    #load ngx_http_srcache_filter_module.so;
+}
