complete http block support a lot of command

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,3 +25,13 @@ dso {
     #load ngx_http_memc_module.so;
     #load ngx_http_srcache_filter_module.so;
 }
+
+http {
+    sendfile                on;
+    tcp_nopush              on;
+    tcp_nodelay             on;
+
+    server_tokens           off;
+    server_info             off;
+    server_tag              off;
+}
