--- a/nginx.conf
+++ b/nginx.conf
@@ -34,4 +34,24 @@ http {
     server_tokens           off;
     server_info             off;
     server_tag              off;
+
+    keepalive_timeout       60s;
+    client_header_timeout   1m;
+    send_timeout            1m;
+    client_max_body_size    50g;
+    client_body_buffer_size 64k;
+    client_body_postpone_sending 64k;
+    proxy_request_buffering off;
+    fastcgi_request_buffering off;
+    proxy_buffering         off;
+    proxy_buffer_size       16k;
+    underscores_in_headers  on;
+    ignore_invalid_headers  off;
+
+    server_names_hash_max_size    40000;
+    server_names_hash_bucket_size 128;
+    large_client_header_buffers 4 32k;
+    proxy_connect_timeout 5s;
+    proxy_read_timeout 10s;
+
 }
