--- a/nginx.conf
+++ b/nginx.conf
@@ -54,5 +54,7 @@ http {
     proxy_connect_timeout 5s;
     proxy_read_timeout 10s;
 
+    include       mime.types;
+    include     conf.d/*.conf;
     include vhost/*.conf;
 }
