--- a/nginx.conf
+++ b/nginx.conf
@@ -52,9 +52,7 @@ http {
     server_names_hash_bucket_size 128;
     large_client_header_buffers 4 32k;
     proxy_connect_timeout 5s;
+    include vhost/default.conf;
     proxy_read_timeout 10s;
 
-    include       mime.types;
-    include     conf.d/*.conf;
-    include vhost/*.conf;
 }
