--- a/nginx.conf
+++ b/nginx.conf
@@ -50,6 +50,6 @@ http {
     server_names_hash_bucket_size 128;
     large_client_header_buffers 4 32k;
     proxy_connect_timeout 5s;
-    include vhost/default.conf;
+    include vhost/*.conf;
     proxy_read_timeout 10s;
 }
